<resources>
    <string name="app_name">TO-DO App</string>
    <string name="email_ingreso">E-mail</string>
    <string name="password_ingreso">Password</string>
    <string name="ingresar">INGRESAR</string>
    <string name="crear_cuenta">CREAR CUENTA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_registro">Nombre</string>
    <string name="registrar">Registrarme</string>
    <string name="title_activity_maps">Map</string>
    t<string name="tarea">Escribe tu Tarea</string>
    <string name="agregar">Agregar</string>
</resources>
