<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_ingreso"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.devhack.todolist.IngresoFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_ingreso"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:hint="@string/password_ingreso"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnIngresar"
                style="@style/AppTheme.botonNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingresar" />
        </LinearLayout>

        <Button
            android:id="@+id/btnCrearCuenta"
            style="@style/AppTheme.botonNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorNaranja"
            android:text="@string/crear_cuenta" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="50dp"
            android:src="@drawable/logodevhack" />

    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>
