<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.devhack.todolist.RegistroFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtnombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_registro"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/txtEmailRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:hint="@string/email_ingreso"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/txtPasswordRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:hint="@string/password_ingreso"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnRegistrar"
                style="@style/AppTheme.botonNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrar" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="50dp"
            android:src="@drawable/logodevhack" />

    </FrameLayout>


</android.support.design.widget.CoordinatorLayout>
